--- a/src/Styles/PageNav.module.css
+++ b/src/Styles/PageNav.module.css
@@ -3,8 +3,14 @@
   flex-direction: column;
   background-color: #69adf6;
   padding: 15px 40px 15px 10px; }
+@media (any-hover: hover) {
+  .navigationPage__link:hover a {
+    text-decoration: underline; } }
 .navigationPage__link a {
+  transition: all 0.3s ease 0s;
   color: #fff; }
+  .navigationPage__link a.active {
+    color: #727272; }
 .navigationPage__link:not(:last-child) {
   margin-bottom: 5px; }
 
