--- a/src/Styles/PageNav.module.scss
+++ b/src/Styles/PageNav.module.scss
@@ -6,12 +6,22 @@
     padding: 15px 40px 15px 10px;
   }
   &__link{
+    @media(any-hover: hover){
+        &:hover{
+          a{
+            text-decoration: underline;
+          }
+        }
+    }
     a{
+      transition: all 0.3s ease 0s;
       color: #fff;
+      &.active{
+        color: #727272;
+      }
     }
     &:not(:last-child){
       margin-bottom: 5px;
     }
   }
-
 }
