--- a/src/Styles/AddPost.module.scss
+++ b/src/Styles/AddPost.module.scss
@@ -4,6 +4,13 @@
   align-items: flex-end;
   &__input{
     height: 100px;
+    font-size: 15px;
+    font-family: 'Century Gothic', sans-serif;
+    padding: 7px;
+    border-radius: 5px;
+    border: 1px solid #727272;
+    resize: none;
+    overflow: auto;
   }
   &__button{
     display: inline-flex;
