--- a/src/Styles/PageContent.module.scss
+++ b/src/Styles/PageContent.module.scss
@@ -3,8 +3,9 @@
   &__body {
     color: #fff;
     display: grid;
-    grid-template-rows: 1fr 1fr;
+    grid-template-rows: 1fr;
     gap: 10px;
+    padding-bottom: 40px;
   }
   &__profile{
 
