--- a/src/Styles/Messages.module.scss
+++ b/src/Styles/Messages.module.scss
@@ -1,4 +1,6 @@
 .messages{
+  flex: 1 1 auto;
+
   display: grid;
   grid-template-columns: 350px 1fr;
   grid-template-rows: 1fr;
@@ -10,6 +12,7 @@
 }
 
 .dialogsMessages{
+  align-self: flex-start;
   padding: 5px 7px;
   background-color: #69adf6;
   &__items{
@@ -21,9 +24,16 @@
 }
 
 .dialog{
+  flex: 1 1 auto;
+  display: flex;
+  flex-direction: column;
+
+  padding: 5px 20px;
   background-color: #c9e9ff;
   &__messages{
-    padding: 10px 7px;
+    padding: 0 20px;
+    flex: 1 1 auto;
+
     display: flex;
     flex-direction: column;
   }
@@ -33,14 +43,18 @@
 }
 
 .messageDialog{
+
   padding-bottom: 6px;
-  &.user{
+  &.outgoing{
     align-self: flex-end;
+  }
+  &.incoming{
+    align-self: flex-start;
   }
   display: grid;
   grid-template-columns: auto 1fr;
-  grid-template-areas: "image name"
-                       "image text";
+  grid-template-areas: "image name date"
+                       "image text date";
   column-gap: 6px;
   align-items: center;
   &__avatar{
@@ -62,5 +76,45 @@
     font-size: 14px;
     color: slategray;
     grid-area: text;
+  }
+  &__date{
+    grid-area: date;
+    color: slategray;
+    font-style: italic;
+  }
+}
+
+.actionsDialog{
+  margin-top: 10px;
+  display: grid;
+  grid-template-columns: 1fr auto;
+  gap: 40px;
+  &__input{
+    flex: 1 1 auto;
+    overflow: hidden;
+    height: 30px;
+    resize: none;
+    font-family: 'Century Gothic', sans-serif;
+    border-radius: 5px;
+    border: 1px solid #727272;
+    align-items: center;
+    padding: 4px 17px;
+  }
+  &__button{
+    align-self: flex-end;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0 15px;
+    text-align: center;
+    transition: all 0.3s ease 0s;
+    min-height: 30px;
+    background-color: deepskyblue;
+    color: #fff;
+    @media(any-hover: hover){
+      &:hover{
+        background-color: #0091c3;
+      }
+    }
   }
 }
